[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsn"
version = "1.0.0"
description = "Network Security Navigator Programming Language"
readme = "README.md"
authors = [{ name = "NSN Team", email = "contact@nsnlang.org" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/luaapy/Network-Security-Navigator"
